Use json for config. Create general xhr method that accepts callbacks
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/chrome-ext/popup.html
+++ b/chrome-ext/popup.html
@@ -6,7 +6,7 @@
  -->
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+     <title>Medio Swipe</title>
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
@@ -28,7 +28,6 @@
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
     <script src="popup.js"></script>
-    <script src="config.js"></script>
   </head>
   <body>
     <div id="notif"></div>
